<resources>
    <string name="app_name">Fansfoot</string>
    <string name="HomeButton">Home</string>
    <string name="SectionButton">Sections</string>
    <string name="VideoButton">Videos</string>
    <string name="ProfileButton">Profile</string>
    <string name="SettingsButton">Settings</string>
    <string name="VideoDescription">Best 100 Gloals in Football 2015/2016</string>
    <string name="facebook_app_id">1820758254812177</string>
    <string name="com_facebook_loginview_log_in_button">LOGIN</string>
    <string name="com_facebook_loginview_log_out_button">LOGOUT</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="LoginFacebookSnak"> Login using Facebook</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string-array name="FB_Array">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

</resources>
