<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.fansfoot.fansfoot.MainActivity">


    <RelativeLayout
        android:id="@+id/frag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:name="com.fansfoot.fansfoot.NsfwPage"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/HomeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/homebtnevent"
            android:drawableTop="@drawable/homebtnevent"
            android:paddingBottom="5dp"
            android:paddingTop="8dp"
            android:text="@string/HomeButton"
            android:textSize="@dimen/tab_button_size"
            android:textColor="@android:color/background_dark" />
        <Button
            android:id="@+id/SectionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SectionButton"
            android:gravity="bottom|center_horizontal"
            android:textSize="@dimen/tab_button_size"
            android:background="@drawable/sectionbtnevent"
            android:drawableTop="@drawable/sectionbtnevent"
            android:paddingBottom="5dp"
            android:paddingTop="8dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/VideoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/VideoButton"
            android:background="@drawable/videobtnevent"
            android:drawableTop="@drawable/videobtnevent"
            android:paddingBottom="5dp"
            android:paddingTop="8dp"
            android:textSize="@dimen/tab_button_size"
            android:gravity="bottom|center_horizontal"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/ProfileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ProfileButton"
            android:gravity="bottom|center_horizontal"
            android:textSize="@dimen/tab_button_size"
            android:textStyle="bold"
            android:background="@drawable/profilebtnevent"
            android:drawableTop="@drawable/profilebtnevent"
            android:paddingBottom="5dp"
            android:paddingTop="8dp"
            />
        <Button
            android:id="@+id/SettingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SettingsButton"
            android:gravity="bottom|center_horizontal"
            android:textSize="@dimen/tab_button_size"
            android:textStyle="bold"
            android:background="@drawable/settingbtnevent"
            android:drawableTop="@drawable/settingbtnevent"
            android:paddingBottom="5dp"
            android:paddingTop="8dp"
            />
    </LinearLayout>

</LinearLayout>
